tests/should_fail/internal_extern_spec.stderr
error: the extern_spec mechanism should not be used on items in crates verified by Creusot
 --> internal_extern_spec.rs:5:42
  |
5 |       impl<T: Clone + Copy> Clone for Seq<T> {
  |  __________________________________________^
6 | |         #[requires(false)]
7 | |         fn clone(&self) -> Self;
  | |__________^

error: aborting due to 1 previous error

